native/include/photon/photon.h

/* ------------------------------------------------------------------------ */
/* Scalars                                                                    */
/* ------------------------------------------------------------------------ */

/** 0 = false, non-zero = true. Never use C `bool` across the boundary. */
typedef int32_t ph_bool;
#define PH_NULL_HANDLE ((uint64_t)0)
enum {
  PH_BUTTON_LEFT   = 0,
  PH_BUTTON_MIDDLE = 1,
  PH_BUTTON_RIGHT  = 2
};
enum {
  PH_MOD_NONE  = 0,
  PH_MOD_SHIFT = 1 << 0,
  PH_MOD_CTRL  = 1 << 1,
  PH_MOD_ALT   = 1 << 2,
  PH_MOD_SUPER = 1 << 3
};
/**
 * Packed RGBA, one byte per channel, red in the most significant byte:
 * 0xRRGGBBAA. Bindings can compute this without calling us.
 *
 * PH_COLOR_AUTO (0 — transparent black) means "let the theme or palette
 * decide". Fully transparent black is never a useful explicit color, so it is
 * free to spend as the sentinel.
 */
typedef uint32_t ph_color;
#define PH_COLOR_AUTO ((uint32_t)0)
/** Inclusive data-space interval. */
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
enum {
  PH_OK                 = 0,
  PH_E_INVALID_HANDLE   = -1,  /* handle is stale, freed, or never existed */
  PH_E_INVALID_ARGUMENT = -2,
  PH_E_OUT_OF_MEMORY    = -3,
  PH_E_UNSUPPORTED      = -4,  /* valid request, not implemented in this build */
  PH_E_NOT_INITIALIZED  = -5,  /* ph_init was not called on this thread's process */
  PH_E_ABI_MISMATCH     = -6,
  PH_E_GL               = -7,  /* the GL context rejected something */
  PH_E_WRONG_THREAD     = -8,  /* plot touched from a thread that does not own it */
  PH_E_INTERNAL         = -9
};
enum {
  PH_SCALE_LINEAR       = 0,
  PH_SCALE_LOG          = 1,
  PH_SCALE_TIME         = 2,
  PH_SCALE_CATEGORICAL  = 3,
  PH_SCALE_ORDINAL_TIME = 4
};
enum {
  PH_MODE_PAN   = 0,
  PH_MODE_BOX   = 1,
  PH_MODE_BOX_X = 2,
  PH_MODE_BOX_Y = 3
};
/** Mirrors core `RenderType` — the GL buffer-usage hint. */
typedef int32_t ph_render_type;
enum {
  PH_RENDER_STATIC  = 0,
  PH_RENDER_DYNAMIC = 1
};
enum {
  PH_JOIN_ROUND = 0,
  PH_JOIN_MITER = 1,
  PH_JOIN_BEVEL = 2,
  PH_JOIN_BUTT  = 3
};
enum {
  PH_STEP_NONE   = 0,
  PH_STEP_BEFORE = 1,
  PH_STEP_AFTER  = 2,
  PH_STEP_CENTER = 3
};
/** Mirrors core `MarkerShape`. */
typedef int32_t ph_marker;
enum {
  PH_MARKER_CIRCLE   = 0,
  PH_MARKER_SQUARE   = 1,
  PH_MARKER_TRIANGLE = 2,
  PH_MARKER_DIAMOND  = 3,
  PH_MARKER_CROSS    = 4,
  PH_MARKER_PLUS     = 5
};
enum {
  /** Nearest by horizontal distance — the classic crosshair-along-x. */
  PH_PICK_X  = 0,
  /** Nearest by vertical distance. */
  PH_PICK_Y  = 1,
  /** Nearest by true 2-D distance; right for point clouds. */
  PH_PICK_XY = 2
};
enum {
  PH_LEGEND_TOP_RIGHT    = 0,
  PH_LEGEND_TOP_LEFT     = 1,
  PH_LEGEND_BOTTOM_LEFT  = 2,
  PH_LEGEND_BOTTOM_RIGHT = 3
};
enum {
  PH_ALIGN_LEFT   = 0,
  PH_ALIGN_CENTER = 1,
  PH_ALIGN_RIGHT  = 2
};
enum {
  PH_BASELINE_ALPHABETIC = 0,
  PH_BASELINE_TOP        = 1,
  PH_BASELINE_MIDDLE     = 2,
  PH_BASELINE_BOTTOM     = 3
};
enum {
  PH_DIM_X = 0,
  PH_DIM_Y = 1
};
enum {
  /** A full-width or full-height guide at one value. */
  PH_ANNOTATION_SPAN  = 0,
  /** A shaded range between two values on one axis. */
  PH_ANNOTATION_BAND  = 1,
  /** A rectangle in data space, optionally filled, bordered and captioned. */
  PH_ANNOTATION_BOX   = 2,
  /** Text at a data-space point. */
  PH_ANNOTATION_LABEL = 3,
  /** A segment between two data-space points. */
  PH_ANNOTATION_LINE  = 4,
  /** The same, extended past its second point to the region's edge. */
  PH_ANNOTATION_RAY   = 5,
  /** Fibonacci retracement levels between `high` and `low` across x0..x1. */
  PH_ANNOTATION_FIB   = 6
};
enum {
  PH_THEME_DARK  = 0,
  PH_THEME_LIGHT = 1
};
/* ------------------------------------------------------------------------ */
/* Host interface                                                             */
/* ------------------------------------------------------------------------ */

/**
 * Which GL flavour the host's context provides. The shaders are authored once
 * against GLSL ES 3.00 and emitted as 3.30 core when the host is desktop GL.
 */
typedef int32_t ph_gfx_api;
enum {
  PH_GFX_GL33   = 0,  /* desktop OpenGL 3.3 core (GLFW, Qt desktop, WGL, NSGL) */
  PH_GFX_GLES30 = 1   /* OpenGL ES 3.0 / ANGLE (mobile, WinUI, Qt-on-ANGLE)    */
};
/** GL entry-point resolver. GLFW: glfwGetProcAddress. Qt: QOpenGLContext::getProcAddress. */
typedef void* (PH_CALL* ph_proc_address_fn)(const char* name, void* user);
enum {
  PH_LOG_ERROR = 0,
  PH_LOG_WARN  = 1,
  PH_LOG_INFO  = 2,
  PH_LOG_DEBUG = 3
};
/** Optional diagnostics sink. Called on the calling thread, never re-entrantly. */
typedef void (PH_CALL* ph_log_fn)(ph_log_level level, const char* message, void* user);
/**
 * What the host promises the library. Passed once to ph_init.
 *
 * `get_proc_address` may be NULL in a headless build (no rendering, layout and
 * interaction math only) — which is exactly how the test suite runs.
 */
typedef struct ph_host_desc {
  uint32_t           struct_size;
  ph_gfx_api         api;
  ph_proc_address_fn get_proc_address;
  void*              get_proc_address_user;
  ph_log_fn          log;
  void*              log_user;
} ph_host_desc;
/**
 * Where a single frame goes. The host makes its GL context current, then hands
 * over a framebuffer and a viewport rectangle in device pixels.
 *
 * This one struct is the whole reason the engine is host-agnostic:
 *   GLFW      framebuffer = 0, rect = the window
 *   Qt/QML    framebuffer = QQuickFramebufferObject's FBO, flip_y = 1
 *   Avalonia  framebuffer = the control's FBO
 *   LWJGL     framebuffer = 0
 * No copies in any of those. Hosts with no GL interop at all (JavaFX, WPF)
 * use ph_plot_render_pixels instead.
 */
typedef struct ph_frame_target {
  uint32_t struct_size;
  /** GL framebuffer object name. 0 = the host's default framebuffer. */
  uint32_t framebuffer;
  /** Viewport within that framebuffer, in device pixels, origin bottom-left. */
  int32_t  x;
  int32_t  y;
  int32_t  width;
  int32_t  height;
  /** Device pixel ratio — device px per logical px. 0 means 1.0. */
  float    dpr;
  /**
   * Set when the target's origin is top-left rather than GL's bottom-left.
   * Qt's FBOs need this; GLFW's default framebuffer does not.
   */
  ph_bool  flip_y;
} ph_frame_target;
/* ------------------------------------------------------------------------ */
/* Colormaps and palettes                                                     */
/* ------------------------------------------------------------------------ */

/**
 * How a layer asks for a continuous colormap.
 *
 * `name` is a built-in ("viridis", "plasma", "inferno", "magma", "cividis",
 * "turbo", "grayscale", "coolwarm", "RdBu", "BrBG", "spectral", "twilight") or
 * anything passed to ph_colormap_register. Unknown names — and NULL — resolve to
 * viridis rather than failing, because a chart that draws in the wrong colours
 * is easier to notice than one that does not draw.
 *
 * `stops` overrides the name with anchors given inline, spaced evenly and
 * interpolated linearly. Their alpha is ignored; a colormap carries no opacity.
 */
typedef struct ph_colormap_spec {
  uint32_t        struct_size;
  const char*     name;
  const ph_color* stops;
  int32_t         stop_count;
  /** High values take the low end's colour. */
  ph_bool         reverse;
  /** 0 is continuous; otherwise the ramp is flattened into this many bands. */
  int32_t         discrete_steps;
} ph_colormap_spec;
/* ------------------------------------------------------------------------ */
/* Polar                                                                      */
/* ------------------------------------------------------------------------ */

/*
 * A polar plot is a mode, not a type.
 *
 * The web core has a whole PolarPlot class because it has to own three canvases
 * and a DOM tooltip. Here there is no DOM, and what actually differs is three
 * things: the grid is rings and spokes rather than lines, the two axes take the
 * same square domain, and (theta, r) is projected to (x, y) on the way in. So
 * this is `ph_plot_set_polar` on an ordinary plot — which means panning,
 * zooming, the legend, annotations, hover and the event queue all keep working
 * without a second copy of any of them.
 *
 * Rotation is the one thing that needs more than a projection at construction:
 * turning the plot re-projects every polar series, so each one keeps the
 * (theta, r) it was built from.
 */
typedef struct ph_polar_config {
  uint32_t struct_size;
  ph_bool  enabled;
  /** theta arrives in degrees rather than radians. */
  ph_bool  degrees;
  /** Fixed outer radius. 0 fits the data. */
  double   max_radius;
  /** Rotation offset, radians counter-clockwise. */
  double   rotation;
  /** Degrees between angular spokes. 0 means 30. */
  double   spoke_step;
} ph_polar_config;
/** Mirrors core `PolarLineOptions`. */
typedef struct ph_polar_line_desc {
  uint32_t       struct_size;
  const double*  theta;
  const double*  r;
  int32_t        count;
  ph_color       color;
  /** Stroke width in logical px. 0 means 2, as in the core's polar. */
  float          width;
  /** Join the last point back to the first — what a closed rose needs. */
  ph_bool        closed;
  const float*   dash;
  int32_t        dash_count;
  const char*    name;
  ph_render_type render_type;
} ph_polar_line_desc;
/** Mirrors core `PolarScatterOptions`. */
typedef struct ph_polar_scatter_desc {
  uint32_t        struct_size;
  const double*   theta;
  const double*   r;
  int32_t         count;
  ph_color        color;
  /** Marker diameter in logical px. 0 means 5. */
  float           size;
  /** Per-point sizes and colours, `count` entries each. NULL for uniform. */
  const float*    sizes;
  const ph_color* colors;
  ph_marker       marker;
  const char*     name;
  ph_render_type  render_type;
} ph_polar_scatter_desc;
/** Floor-trader pivots for the session after the one described. */
typedef struct ph_pivot_levels {
  double pivot;
  double r1;
  double r2;
  double r3;
  double s1;
  double s2;
  double s3;
} ph_pivot_levels;
/** One Renko / line-break brick: a wickless candle body at a sequential index. */
typedef struct ph_brick {
  double  open;
  double  close;
  int32_t x;
  ph_bool up;
} ph_brick;
/**
 * One Point & Figure column. `kind` is 'X' (rising) or 'O' (falling) as a
 * character code. The box centres the web core also returns are omitted
 * deliberately: they are `min(from,to) + box_size/2` stepping by `box_size`,
 * and a nested variable-length array is the one shape this ABI has no good way
 * to hand back.
 */
typedef struct ph_pf_column {
  double  from;
  double  to;
  int32_t col;
  int32_t kind;
} ph_pf_column;
/** What a volume profile found, beside the per-bin arrays. */
typedef struct ph_volume_profile {
  double  bin_size;
  double  price_min;
  double  price_max;
  /** Bin index of the highest-volume level — the Point of Control. */
  int32_t poc_index;
} ph_volume_profile;
enum {
  /** No window at all — right only when the frame holds whole periods. */
  PH_WINDOW_RECTANGULAR = 0,
  /** The sane default. */
  PH_WINDOW_HANN        = 1,
  /** A touch more leakage for a lower first sidelobe. */
  PH_WINDOW_HAMMING     = 2,
  /** Suppresses sidelobes hardest, at the cost of resolution. */
  PH_WINDOW_BLACKMAN    = 3,
  /** Triangular, and cheap. */
  PH_WINDOW_BARTLETT    = 4
};
enum {
  PH_TOGGLE_DEFAULT = 0,
  PH_TOGGLE_ON      = 1,
  PH_TOGGLE_OFF     = -1
};
enum {
  /** Positions along x, values along y. */
  PH_ORIENT_VERTICAL   = 0,
  /** Positions along *y*, values along *x*; `width` becomes the thickness. */
  PH_ORIENT_HORIZONTAL = 1
};
enum {
  PH_EVENT_NONE            = 0,
  /** The x or a y domain changed (pan, zoom, autoscale, setView). */
  PH_EVENT_VIEW_CHANGED    = 1,
  /** The hover cursor moved; `cursor_valid` is 0 when it left the plot. */
  PH_EVENT_CURSOR_MOVED    = 2,
  PH_EVENT_MODE_CHANGED    = 3,
  PH_EVENT_LAYER_VISIBILITY = 4,
  /**
   * The plot's contents changed and the host should schedule a frame —
   * Qt: update(), GLFW: wake the loop, Avalonia: RequestNextFrameRendering().
   */
  PH_EVENT_REDRAW_REQUESTED = 5,
  /**
   * The hover cursor moved onto — or off — a data point. `layer` and
   * `point_index` name it, `point_x`/`point_y` are its data coordinates, and
   * `point_valid` is 0 when nothing is under the cursor.
   *
   * Emitted only when the picked point changes, not on every mouse move: a host
   * that shows a tooltip should not have to filter a stream of identical
   * events.
   */
  PH_EVENT_POINT_PICKED    = 6
};
enum {
  /** Stretch each axis to fill the cube — best for a surface, where the shape
   *  matters more than the units. */
  PH_ASPECT_CUBE = 0,
  /** One shared scale, so a long thin scene stays long and thin. */
  PH_ASPECT_DATA = 1
};
enum {
  /** The natural choice for a surface or a point cloud. */
  PH_PROJECTION_PERSPECTIVE  = 0,
  /** No perspective divide, so a long scene keeps one scale end to end —
   *  which is what a diagram wants. `distance` then sets the visible
   *  half-height rather than the eye distance. */
  PH_PROJECTION_ORTHOGRAPHIC = 1
};