native/bindings/csharp/Photon.g.cs

// <auto-generated>
//   Generated by tools/generate_bindings.py from include/photon/photon.h.
//   Do not edit: regenerate instead. Field order here is load-bearing —
//   a member out of place is silent data corruption, not a compile error.
// </auto-generated>

using System;
using System.Runtime.InteropServices;

namespace Photon.Native;

public static partial class Ph
{
    /// <summary>The shared library, without prefix or extension.</summary>
    public const string Library = "photon";

    /// <summary>
    ///   Mandatory. .NET defaults to StdCall on 32-bit Windows, and the
    ///   library is cdecl everywhere.
    /// </summary>
    private const CallingConvention Cc = CallingConvention.Cdecl;

    public const uint AbiVersion = 1;

    public const ulong PH_NULL_HANDLE = 0UL;
    public const int PH_COLOR_AUTO = 0;
    public const int PH_BUTTON_LEFT = 0;
    public const int PH_BUTTON_MIDDLE = 1;
    public const int PH_BUTTON_RIGHT = 2;
    public const int PH_MOD_NONE = 0;
    public const int PH_MOD_SHIFT = 1;
    public const int PH_MOD_CTRL = 2;
    public const int PH_MOD_ALT = 4;
    public const int PH_MOD_SUPER = 8;
    public const int PH_OK = 0;
    public const int PH_E_INVALID_HANDLE = -1;
    public const int PH_E_INVALID_ARGUMENT = -2;
    public const int PH_E_OUT_OF_MEMORY = -3;
    public const int PH_E_UNSUPPORTED = -4;
    public const int PH_E_NOT_INITIALIZED = -5;
    public const int PH_E_ABI_MISMATCH = -6;
    public const int PH_E_GL = -7;
    public const int PH_E_WRONG_THREAD = -8;
    public const int PH_E_INTERNAL = -9;
    public const int PH_SCALE_LINEAR = 0;
    public const int PH_SCALE_LOG = 1;
    public const int PH_SCALE_TIME = 2;
    public const int PH_SCALE_CATEGORICAL = 3;
    public const int PH_SCALE_ORDINAL_TIME = 4;
    public const int PH_MODE_PAN = 0;
    public const int PH_MODE_BOX = 1;
    public const int PH_MODE_BOX_X = 2;
    public const int PH_MODE_BOX_Y = 3;
    public const int PH_RENDER_STATIC = 0;
    public const int PH_RENDER_DYNAMIC = 1;
    public const int PH_JOIN_ROUND = 0;
    public const int PH_JOIN_MITER = 1;
    public const int PH_JOIN_BEVEL = 2;
    public const int PH_JOIN_BUTT = 3;
    public const int PH_STEP_NONE = 0;
    public const int PH_STEP_BEFORE = 1;
    public const int PH_STEP_AFTER = 2;
    public const int PH_STEP_CENTER = 3;
    public const int PH_MARKER_CIRCLE = 0;
    public const int PH_MARKER_SQUARE = 1;
    public const int PH_MARKER_TRIANGLE = 2;
    public const int PH_MARKER_DIAMOND = 3;
    public const int PH_MARKER_CROSS = 4;
    public const int PH_MARKER_PLUS = 5;
    public const int PH_PICK_X = 0;
    public const int PH_PICK_Y = 1;
    public const int PH_PICK_XY = 2;
    public const int PH_LEGEND_TOP_RIGHT = 0;
    public const int PH_LEGEND_TOP_LEFT = 1;
    public const int PH_LEGEND_BOTTOM_LEFT = 2;
    public const int PH_LEGEND_BOTTOM_RIGHT = 3;
    public const int PH_ALIGN_LEFT = 0;
    public const int PH_ALIGN_CENTER = 1;
    public const int PH_ALIGN_RIGHT = 2;
    public const int PH_BASELINE_ALPHABETIC = 0;
    public const int PH_BASELINE_TOP = 1;
    public const int PH_BASELINE_MIDDLE = 2;
    public const int PH_BASELINE_BOTTOM = 3;
    public const int PH_DIM_X = 0;
    public const int PH_DIM_Y = 1;
    public const int PH_ANNOTATION_SPAN = 0;
    public const int PH_ANNOTATION_BAND = 1;
    public const int PH_ANNOTATION_BOX = 2;
    public const int PH_ANNOTATION_LABEL = 3;
    public const int PH_ANNOTATION_LINE = 4;
    public const int PH_ANNOTATION_RAY = 5;
    public const int PH_ANNOTATION_FIB = 6;
    public const int PH_THEME_DARK = 0;
    public const int PH_THEME_LIGHT = 1;
    public const int PH_GFX_GL33 = 0;
    public const int PH_GFX_GLES30 = 1;
    public const int PH_LOG_ERROR = 0;
    public const int PH_LOG_WARN = 1;
    public const int PH_LOG_INFO = 2;
    public const int PH_LOG_DEBUG = 3;
    public const int PH_WINDOW_RECTANGULAR = 0;
    public const int PH_WINDOW_HANN = 1;
    public const int PH_WINDOW_HAMMING = 2;
    public const int PH_WINDOW_BLACKMAN = 3;
    public const int PH_WINDOW_BARTLETT = 4;
    public const int PH_TOGGLE_DEFAULT = 0;
    public const int PH_TOGGLE_ON = 1;
    public const int PH_TOGGLE_OFF = -1;
    public const int PH_ORIENT_VERTICAL = 0;
    public const int PH_ORIENT_HORIZONTAL = 1;
    public const int PH_EVENT_NONE = 0;
    public const int PH_EVENT_VIEW_CHANGED = 1;
    public const int PH_EVENT_CURSOR_MOVED = 2;
    public const int PH_EVENT_MODE_CHANGED = 3;
    public const int PH_EVENT_LAYER_VISIBILITY = 4;
    public const int PH_EVENT_REDRAW_REQUESTED = 5;
    public const int PH_EVENT_POINT_PICKED = 6;
    public const int PH_ASPECT_CUBE = 0;
    public const int PH_ASPECT_DATA = 1;
    public const int PH_PROJECTION_PERSPECTIVE = 0;
    public const int PH_PROJECTION_ORTHOGRAPHIC = 1;

    [UnmanagedFunctionPointer(Cc)]
    public delegate IntPtr PhProcAddressFn([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr user);

    [UnmanagedFunctionPointer(Cc)]
    public delegate void PhLogFn(int level, [MarshalAs(UnmanagedType.LPUTF8Str)] string message, IntPtr user);

    /// <summary>ph_range — 16 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_range
    {
        /// <summary>offset 0</summary>
        public double lo;
        /// <summary>offset 8</summary>
        public double hi;
    }

    /// <summary>ph_host_desc — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_host_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int api;
        /// <summary>offset 8</summary>
        public IntPtr get_proc_address;
        /// <summary>offset 16</summary>
        public IntPtr get_proc_address_user;
        /// <summary>offset 24</summary>
        public IntPtr log;
        /// <summary>offset 32</summary>
        public IntPtr log_user;
    }

    /// <summary>ph_frame_target — 32 bytes, alignment 4.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_frame_target
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public uint framebuffer;
        /// <summary>offset 8</summary>
        public int x;
        /// <summary>offset 12</summary>
        public int y;
        /// <summary>offset 16</summary>
        public int width;
        /// <summary>offset 20</summary>
        public int height;
        /// <summary>offset 24</summary>
        public float dpr;
        /// <summary>offset 28</summary>
        public int flip_y;
    }

    /// <summary>ph_colormap_spec — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_colormap_spec
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr name;
        /// <summary>offset 16</summary>
        public IntPtr stops;
        /// <summary>offset 24</summary>
        public int stop_count;
        /// <summary>offset 28</summary>
        public int reverse;
        /// <summary>offset 32</summary>
        public int discrete_steps;
    }

    /// <summary>ph_polar_config — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_polar_config
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int enabled;
        /// <summary>offset 8</summary>
        public int degrees;
        /// <summary>offset 16</summary>
        public double max_radius;
        /// <summary>offset 24</summary>
        public double rotation;
        /// <summary>offset 32</summary>
        public double spoke_step;
    }

    /// <summary>ph_polar_line_desc — 72 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_polar_line_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr theta;
        /// <summary>offset 16</summary>
        public IntPtr r;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 28</summary>
        public uint color;
        /// <summary>offset 32</summary>
        public float width;
        /// <summary>offset 36</summary>
        public int closed;
        /// <summary>offset 40</summary>
        public IntPtr dash;
        /// <summary>offset 48</summary>
        public int dash_count;
        /// <summary>offset 56</summary>
        public IntPtr name;
        /// <summary>offset 64</summary>
        public int render_type;
    }

    /// <summary>ph_polar_scatter_desc — 80 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_polar_scatter_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr theta;
        /// <summary>offset 16</summary>
        public IntPtr r;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 28</summary>
        public uint color;
        /// <summary>offset 32</summary>
        public float size;
        /// <summary>offset 40</summary>
        public IntPtr sizes;
        /// <summary>offset 48</summary>
        public IntPtr colors;
        /// <summary>offset 56</summary>
        public int marker;
        /// <summary>offset 64</summary>
        public IntPtr name;
        /// <summary>offset 72</summary>
        public int render_type;
    }

    /// <summary>ph_pivot_levels — 56 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_pivot_levels
    {
        /// <summary>offset 0</summary>
        public double pivot;
        /// <summary>offset 8</summary>
        public double r1;
        /// <summary>offset 16</summary>
        public double r2;
        /// <summary>offset 24</summary>
        public double r3;
        /// <summary>offset 32</summary>
        public double s1;
        /// <summary>offset 40</summary>
        public double s2;
        /// <summary>offset 48</summary>
        public double s3;
    }

    /// <summary>ph_brick — 24 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_brick
    {
        /// <summary>offset 0</summary>
        public double open;
        /// <summary>offset 8</summary>
        public double close;
        /// <summary>offset 16</summary>
        public int x;
        /// <summary>offset 20</summary>
        public int up;
    }

    /// <summary>ph_pf_column — 24 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_pf_column
    {
        /// <summary>offset 0</summary>
        public double from;
        /// <summary>offset 8</summary>
        public double to;
        /// <summary>offset 16</summary>
        public int col;
        /// <summary>offset 20</summary>
        public int kind;
    }

    /// <summary>ph_volume_profile — 32 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_volume_profile
    {
        /// <summary>offset 0</summary>
        public double bin_size;
        /// <summary>offset 8</summary>
        public double price_min;
        /// <summary>offset 16</summary>
        public double price_max;
        /// <summary>offset 24</summary>
        public int poc_index;
    }
